syntax = "proto3";

package UserPackage;

service UserService {
  rpc Login (LoginRequest) returns (AuthResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse) {}
  rpc FindAllUsers (Empty) returns (FindAllUsersResponse) {}
  rpc FindUser(UserId) returns (UserResponse){}
  rpc CreateUser(CreateUserRequest) returns (UserResponse){}
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse){}
  rpc DeactivateUser(UserId) returns (UserResponse){}
  rpc MakeUserAdmin(UserId) returns (UserResponse){}
  rpc DeleteUser(UserId) returns (DeleteUserResponse){} 
}

message Empty {}

message UserId {
    int32 id=1;    
}

message UpdateUserRequest{
    int32 id=1;
  optional string name=2;
  optional string mobile=3;
  optional string gender=4;
  optional string email=5;
}

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    bool active=5;
    string mobile=6;
    string gender=7;
  }

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string mobile = 4;
  string gender = 5;
  optional string role = 6;
  optional bool active=7;
}

message UserResponse {
  int32 statusCode = 1;
  string message = 2;
  User user=3;
}

message FindAllUsersResponse {
  int32 statusCode = 1;
  string message = 2;
  repeated User users=3;
}

message DeleteUserResponse{
  int32 statusCode = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string deviceid = 3;
  string platform = 4;
}

message AuthResponse {
  int32 statusCode = 1;
  string message = 2;
  string accesstoken = 3;
  string refreshtoken=4;
}

message LogoutRequest {
  string email = 1;
  string deviceid = 2;
  string platform = 3;
}

message RefreshTokenRequest {
  string email = 1;
  string deviceid = 2;
  string platform = 3;
  string refreshtoken=4;
}

message LogoutResponse{
  int32 statusCode = 1;
  string message = 2;
}
message ValidateRequest{
  string token = 1;
}

message ValidateResponse{
  string name = 1;
  string email = 2;
  string role = 3;
}